- Added a new debugger for win32 this version is NT Service compatible, logs to service.log
  when a crash occurs while running in service mode. The new debugger requires dbghelp.dll
  version 5.0 or newer. Included natively on Win2k/XP and available as redistributable for
  other versions. Also removes StackTrace
- Added src/win32/gpl.rtf (used for installer) made installer download dbghelp.dll if needed
- Added an installer script to generate the Win32 SSL version
- Made the win32 uninstaller remove dbghelp.dll if it was added when uninstalling
- Added a #ifdef _WIN32 for extern BOOL IsService; in ircd.c that made compile break
  on non WIN32 systems
- Depricated AKILL/RAKILL and made them alias to TKL G +/- - for normal users they
  just reply that the commands are depricated. Server compatiblity is maintained. 
  Eventually it will just be removed. Thank god for modules.
- Fixed a silly bug with regards to matching against compressed IPs in link {} checking
- Added some release notes with regards to scanners
- Removed s_segv handler
- Changed ./update to use update.unrealircd.com
- Made ./configure check if it has parameters, and error if it don't.
- Made ./configure remove uscore.c and uscore binary after test
- Removed mutex.c
- Credits changes, various tweaks mzp ftq Gzdqmx qhqdk dqxqmeq oapq otmxxqzsq. Tmbbk tgzfuzs.
- Fixed some ./configure errors
- Added ircd/safe_SSL_read/write from bahamut+inet6/azzuranet. This can be done much nicer
  when newio is done.
- Updated the config parser to be smarter when dealing with times and sizes
- Updated doc/conf.doc for any new config changes
- Made the win32 installer remove the . from the begining of . files and append .txt to
  most text files, ie .RELEASE.NOTES becomes RELEASE.NOTES.txt
- Updated .RELEASE.NOTES
- Fixed a bug where /who always reported 0 hops reported by Alzirr (#0000242)
- More SSL horror and fixed a missing , in m_who
- Fixed !SSL compile error